[package]
name = "image-manipulation"
version = "0.1.0"
authors = ["Eduardo Sandalo Porto <eduardosandaloporto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rgb = "0.8"
image = "0.22"
# rayon = "1.1"
imageproc = "0.19"